@@ -6,7 +6,11 @@ DIST gitlab-runner-10.0.2.tar.gz 3599514 SHA256 783c1c597a2b9ee78b2396852235010c
 DIST gitlab-runner-10.1.1-prebuilt-arm.tar.xz 8557920 SHA256 b6d898276b3fce934a95e1ce1d91f518069c1792cab789a68e39f9ee1aa79a31 SHA512 bfebc71ac3e88f827557c3f0d207d5f97ffae8b7e8043ed0090eb16098cb6132dfe7babf694bde201fa07cd3eb19e1be25ec5b09e718e4e94d40cc7e9b87705c WHIRLPOOL 58dd2bdddf95a316f9daf85a8ac50ab4ef3ff4adee1ff1971fdf2afdbc4e0fdc70edbd3831d8aec2f8f2740b3f5da551dce30697dd0a42efebc02f9810bd60a3
 DIST gitlab-runner-10.1.1-prebuilt-x86_64.tar.xz 10469000 SHA256 398452fe5e1fdf8fafb5fde48336ea8f9de7fb09aec67b7f4851f7e6bec0de5f SHA512 714008d90f626eeff1471f5f44c9a9d4c9387e054a60ca8b454787f807591d611591e83757fb1f8aff5a70fa2afc285751f783a7ac729757f8d2c47e54242d3b WHIRLPOOL cdba3e037f458dfe8a65238b4173eaa86e70353eeab7918ad6af7ff54a405073922761d29fdb64f1840301be7dca4f60cc184f9a3e50ff85cb259e765aec4aa1
 DIST gitlab-runner-10.1.1.tar.gz 3607287 SHA256 f5bcc173e9694589ee199d9ff7da38c2996ecce8b121066982dda6f8b5a4ed43 SHA512 1a541637d3e1ff447c810fc8a6c51546fd39b98d643f5464629f3fa2fa87b38672a20653408344057fe7076a0b9661e75b3b05d96f665faf2b862f64f0ba9dfe WHIRLPOOL e6b1cd42ec24e281b27a4c2d438270433e4e760c10900f2834b29437ae4a1ed84cc82f8e64f968499045496179d80a397a8e25ce0a1b77dcbe6015a583cb97a9
+DIST gitlab-runner-10.2.1-prebuilt-arm.tar.xz 8554156 SHA256 45e834e16c99378f1b9361349206c115435b8565b8edcfcda13d56d7baf92824 SHA512 6d5158fd7b2e4c40ffeeb1f292b955958526a7370e699a8d0c0ec6b4d321e12e584f04837a707f7f38a2af7e4e073089566dd33bcec8706626dca7eef6f90b2a WHIRLPOOL 6a0f98fcf4e35d88ee49c31ad914fb841d3efb9d47891272eaec78d2f8d8d5e8c2440963742d3e925d4684550f88e2ebe4c5703ad4423523506746af0c0a266f
+DIST gitlab-runner-10.2.1-prebuilt-x86_64.tar.xz 10473104 SHA256 6d13458230571770a4950e2a2948a7d9ab2b1efbbb00734798624500d811f0d0 SHA512 9b328687d78166f6791e8ea91bef6ebe11891e7ebda9054dea156da128004b4d6b6439135a20368af7d523ff21981a6f3b60b145ef3cbdb6413511a7746eb0bc WHIRLPOOL b16e4e9a7cb4ed4842616efa1c05afe8244950d0fb0ba487f0c5b043f06a023fe555a398a90e8e4893841e770d3fe7488d6caabed7f6e1af5376eca50d31d7c5
+DIST gitlab-runner-10.2.1.tar.gz 3695554 SHA256 530f3281cf99c80136969a1ef9edc60dd726862f5949cf1042e64ac1a2a3ac74 SHA512 c2962586a15c7aaa6c18f500212d67ecb4c4907de8f6e7faac920d9a7714fb51650fb8d81cded71a5c173910c7e5ac61b7d33a6bd0f81faa1b125bee2e242f5f WHIRLPOOL 84ed4fc7a8b04226ba52938458e15b1bbc1417ad0979665ee4b4859504bf9267280efc18e1e3d420788a7ae7a62467b19db906057fc397e54a8894b7113b0292
 EBUILD gitlab-runner-10.0.2.ebuild 2545 SHA256 59794dd6f33ce0fc0d1c997db7e5e4eaea226485aada8f700e3d183c2284e409 SHA512 4e9e6a93d621f595cc2b20ea4cb49afc0c9c4980b5ba13bec342994596caef0e0272fcd0b2deb087c96beebec283827916aa1b5594337febf592fd0251121327 WHIRLPOOL 5a48199473313fb247f621a8abf146fc794d02316b2cacba77fb3265047cc33115b26f2a21f58fb9648deb85c4c4c1f5190f6f3768bbeb4bc21a1373b5ac52b3
 EBUILD gitlab-runner-10.1.1.ebuild 2545 SHA256 7bdf62baddd6a43ee546937f8c87d10bdfda809ddbfd901471c62908c4363165 SHA512 543c36ea54fbfe74e755c17bf0660a9fac7d2841aee17ad99e95816d89606b4934aebee5a6e98621803a4f10a0342c2e9a41d69898c60da202655d1e1da1926c WHIRLPOOL 68f73d719fad6c9c8b849d664f9efb01af27877904e0360515374eb2b1c10f22058e8ae2081faf34f0058dac7579558b8309b089746f802bef0668243ada47e5
-MISC ChangeLog 1074 SHA256 315f7fdd93797e3935d61e17cd7d430e3df445d751fc26cb4d03adf27a1111c9 SHA512 0236d63ffe27f09d4be6af41e2cbf727ac641b3bbca8faa63b41a2ec56c092a0aca548adbe3a25646110dd1bdaf17daf3d45293ea82bc7773e9d1037e290219d WHIRLPOOL 83af0d384116aee290c58311e4c4f73fe9e99659ee8738184294183dcf28f895af73a0da73865e7eadec874bc471b26914fb3546c9f68cc4387e992ef2cdffa6
+EBUILD gitlab-runner-10.2.1.ebuild 2545 SHA256 fc7d7c847bc175f6f74f71f8c0eeef9b4fad9c4d779f79640e6439c907ad0963 SHA512 3ccc5f38b82ef5453724819db7227d3ec234940af8e2a2fdd7b14db199a13e1e2ed0ae55bda87cb0061a0c548bf2acedc940ea3a70dc1dfa5644478df785b97a WHIRLPOOL ed6be446184ccb593c48da4b51336cd5f377f72041014896e2d11b3e2782c0faa36f3513fb5ed0f692eb43af229f71297265d37ed74c52412477cb204c229e2f
+MISC ChangeLog 1250 SHA256 36de24297d3f52cc229d3b8b3df3f5c399f46d5ea0606fb1102ed992fd61406c SHA512 60669c86a54b4b0267211f6a1fa15a67d0ea32e5b1cedb1d7e18ab0bf3b40cdee2050f6da9e3bc4f6cb95e455d67ac4e0145cea2382d35a27013ec25bc9ba4e4 WHIRLPOOL 24cff7463f27b2a8d7aca8340a869a58d72f4b5dc39d1f3aecc170ea728dfe976fa5604443ddb67ec28bca5ec4f97c1fd77d86d89ba7cbe6fca7ba60ddb97144
 MISC metadata.xml 329 SHA256 f0ae08a64aa32a07486e744ce11ac5448770b7320454015bcd065e312fcb5e9c SHA512 11e4eaf25633c5979e5243350bdf2ddc6d9dca06ab54ec38359591f1d002ea2a224e53b3e6c4ac53b5b2e795a87769fdbd97c547b008272e0a1491141f422e5d WHIRLPOOL ab2c1cb3d9aff1f757b49633f94d4b98da4b83dadab12ab8d869f9e1f6763b3125010147472e58e910e7fc42da262dbd69a1bf3939f3720a79ab4329184b4c35
